<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.preferences.widgets.ProfilePreference android:key="preference_category_profile" />

    <Preference
        android:icon="@drawable/ic_user"
        android:key="preference_category_admin_panel"
        android:title="@string/preferences__admin_panel" />

    <Preference
        android:icon="@drawable/ic_textsms_24dp"
        android:key="preference_category_sms_mms"
        android:title="@string/preferences__sms_mms" />

    <Preference
        android:icon="@drawable/ic_notifications_24dp"
        android:key="preference_category_notifications"
        android:title="@string/preferences__notifications" />

    <Preference
        android:icon="@drawable/ic_security_24dp"
        android:key="preference_category_app_protection"
        android:title="@string/preferences__privacy" />

    <Preference
        android:icon="@drawable/ic_brightness_6_24dp"
        android:key="preference_category_appearance"
        android:title="@string/preferences__appearance" />

    <Preference
        android:icon="@drawable/ic_forum_24dp"
        android:key="preference_category_chats"
        android:title="@string/preferences__chats" />

    <Preference
        android:icon="@drawable/ic_laptop_24dp"
        android:key="preference_category_devices"
        android:title="@string/preferences__linked_devices" />

    <Preference
        android:icon="@drawable/ic_advanced_24dp"
        android:key="preference_category_advanced"
        android:title="@string/preferences__advanced" />

</PreferenceScreen>
