<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_surname"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_email"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_user_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/user_activity_add_user_role"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinner_user"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/userButton"
        app:cpb_textIdle="@string/user_activity_add_user_to_server"
        app:cpb_selectorIdle="@drawable/progress_button_state"
        app:cpb_colorIndicator="@color/white"
        app:cpb_colorProgress="@color/textsecure_primary"
        app:cpb_cornerRadius="50dp"
        android:background="@color/signal_primary"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>