<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_name"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_surname"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_activity_user_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/joinButton"
        app:cpb_textIdle="@string/join_fragment_join_button"
        app:cpb_selectorIdle="@drawable/progress_button_state"
        app:cpb_colorIndicator="@color/white"
        app:cpb_colorProgress="@color/textsecure_primary"
        app:cpb_cornerRadius="50dp"
        android:background="@color/signal_primary"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>